--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <link rel="stylesheet" type="text/css" href="styles/2-common.css">
-        <link rel="stylesheet" type="text/css" href="styles/2-header.css">
-        <link rel="stylesheet" type="text/css" href="styles/2-footer.css">
-        <meta charset="utf-8">
-        <title> HBNB - AirBnB </title>
-    </head>
-    <body>
-        <header>
-            <div></div>
-        </header>
-        <footer>
-            <div>
-                Holberton School 
-            </div>
-        </footer>
-    </body>
+<head>
+    <link rel="stylesheet" type="text/css" href="./styles/3-common.css">
+    <link rel="stylesheet" type="text/css" href="./styles/3-header.css">
+    <link rel="stylesheet" type="text/css" href="./styles/3-footer.css">
+    <link rel="icon" type="image/png" href="./images/icon.png" />
+    <meta charset="utf-8">
+    <title> HBNB - AirBnB </title>
+</head>
+<body>
+<header>
+    <div>
+        <div class="logo"></div>
+    </div>
+</header>
+<footer>
+    <div>
+        Holberton School
+    </div>
+</footer>
+</body>
 </html>
