--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -9,20 +9,20 @@
                 margin: 0;
                 padding: 0;
             }
-            header.div
+            header div
             {
                 background-color: #FF0000;
-                height: 70px; 
+                height: 70px;
                 width: 100%;
             }
-            footer.div
+            footer div
             {
-                background-color: #00FF00; 
-                height: 60px; 
-                width: 100%; 
-                text-align: center; 
-                position: fixed; 
-                bottom: 0; 
+                background-color: #00FF00;
+                height: 60px;
+                width: 100%;
+                text-align: center;
+                position: fixed;
+                bottom: 0;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -35,7 +35,7 @@
         </header>
         <footer>
             <div>
-                Holberton School 
+                Holberton School
             </div>
         </footer>
     </body>
